--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head></head>
   <body>
-    <input id="duration">
+    <input id="duration" />
     <button id="start">Start</button>
     <button id="pause">Pause</button>
     <script src="index.js"></script>
